Fixed weird layout bug on article edit page.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,7 +22,7 @@ a {}
 a:hover {}
 
 
-/* Container, userbar, navbar */
+/* Container, userbar, navbar, footer: basic structural layout */
 
 #container {
   margin: 0 auto;
@@ -34,83 +34,41 @@ a:hover {}
 #userbar {
   margin: 20px auto 20px auto;
   padding: 20px;
-  width: 960px;
-
+  width: 940px;
   background: purple;
 }
 
-.profile {
-  float: right;
-}
+.profile { float: right; }
 
 nav {
   padding: 5px 0 5px 0;
   background: blue;
 }
 
+footer { text-align: center; margin: 20px; }
 
 
+/* Frontpage layout */
 
+.article { background: #fff !important; }
 
-
-
-
-/*.box{
-display:inline-block;
-padding-left:10px;
-}
-.clear {
-  clear: both;
-  height: 0;
-  overflow: hidden;
+.normal {
+  display: inline-block;
+  width: 200px;
+  height: 200px;
+  padding: 20px;
+  margin: -2px;
 }
 
-#flash_notice, #flash_error, #flash_alert {
-  padding: 5px 8px;
-  margin: 10px 0;
-}
-#flash_notice {
-  background-color: #CFC;
-  border: solid 1px #6C6;
-}
-
-#flash_error, #flash_alert {
-  background-color: #FCC;
-  border: solid 1px #C66;
+.featured {
+  display: block;
+  margin: auto;
+  width: 940px;
+  height: 350px;
+  background: green !important;
 }
 
-.fieldWithErrors {
-  display: inline;
-}
 
-.error_messages {
-  width: 400px;
-  border: 2px solid #CF0000;
-  padding: 0px;
-  padding-bottom: 12px;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-  font-size: 12px;
-}
 
-.error_messages h2 {
-  text-align: left;
-  font-weight: bold;
-  padding: 5px 10px;
-  font-size: 12px;
-  margin: 0;
-  background-color: #c00;
-  color: #fff;
-}
 
-.error_messages p {
-  margin: 8px 10px;
-}
 
-.error_messages ul {
-  margin: 0;
-}
-
-.admin {
-  float: right;
-}*/
